# ESP32C6-Rust-LED-Steuerung

./: .gitignore  CLAUDE.md  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml
esp-led-steuerung/: .clippy.toml  .gitignore  Cargo.toml  README.md  TESTING.md
esp-led-steuerung/esp-core/: Cargo.toml
esp-led-steuerung/esp-core/src/: lib.rs  logic.rs  traits.rs  types.rs
esp-led-steuerung/esp-firmware/: .env.example  Cargo.toml  build.rs  rust-toolchain.toml
esp-led-steuerung/esp-firmware/.cargo/: config.toml
esp-led-steuerung/esp-firmware/src/: config.rs  lib.rs
esp-led-steuerung/esp-firmware/src/hal/: led_writer.rs  mod.rs
esp-led-steuerung/esp-firmware/src/tasks/: http.rs  led_blink.rs  mdns.rs  mod.rs  mqtt.rs  wifi.rs
esp-led-steuerung/esp-firmware/src/web/: index.html  mod.rs  protocol.rs
esp-led-steuerung/esp-tests/: Cargo.toml
esp-led-steuerung/esp-tests/src/: lib.rs
esp-led-steuerung/esp-tests/tests/: led_tests.rs
