[package]
name = "esp-core"
version = "1.0.0"
edition = "2024"

# Core library - NO hardware dependencies!
# Enthält nur Traits und Pure Logic

[dependencies]
rgb = { workspace = true }
serde = { workspace = true, optional = true }
defmt = { version = "1.0.1", optional = true }

[features]
default = []
serde = ["dep:serde"]
defmt = ["dep:defmt"]
